Fix a few regression issues (#164)
* fix input styles

* fix refactor regressions

* lint webhook controller

* fix expanding header hide styles

* add theme build command

* fix path for wp-cli commands

* debug all the things

--- a/theme/package.json
+++ b/theme/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "build:css": "node bin/build-theme-css.js",
-    "watch:css": "onchange 'assets/blocks/src/*.css' -- npm run build:css"
+    "watch:css": "onchange 'assets/blocks/src/*.css' -- npm run build:css",
+    "build": "npm run build:css && zip -r ../plugin.zip . -x@.distignore"
   },
   "repository": {
     "type": "git",
