Remove Headstart and apply a few fixes (#182)
* remove headstart

it's too old to be useful

* minor fixes

h/t KK

* use PHP 8.2 for docker

* fix pagination in admin site list

h/t KK

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       MYSQL_ROOT_PASSWORD: somewordpress
 
   wordpress:
-    image: wordpress:latest
+    image: wordpress:php8.2
     volumes:
       - wp_data:/var/www/html
       - ./plugin:/var/www/html/wp-content/plugins/wpcloud-station
