Plugin:  add log file downloading (#193)
* sketch out fetching logs

* make npm start do a build to make sure the latest is there

* set up wp env to use 8.1 and named plugin and theme paths

* add ui for download logs block

* add dowload handling to the form handler

also stub out the log download data

* allow clicking header to toggle if it has the right className

* make input renderer more general

* update download template and add timestamp defaults

* remove some error logs

* fix how the post title is collected

* refactor the client log endpoint

* clean up log filtering

* remove error log

* fix site size

* add download block to the site template

--- a/plugin/package.json
+++ b/plugin/package.json
@@ -12,7 +12,7 @@
 		"lint:js": "wp-scripts lint-js ./blocks/src/**/*.js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "npm run start:blocks & npm run start:frontend & npm run start:admin",
+		"start": "npm run build && npm run start:blocks & npm run start:frontend & npm run start:admin",
 		"build:blocks" : "wp-scripts build --webpack-src-dir=blocks/src/ --output-path=blocks/build/ --webpack-copy-php",
 		"start:blocks" : "wp-scripts start --webpack-src-dir=blocks/src/ --output-path=blocks/build/ --webpack-copy-php",
 		"build:frontend": "wp-scripts build --webpack-src-dir=assets/js/src/ --output-path=assets/js/build/",
