Don't archive the temp directory

--- a/.github/workflows/release-build.yaml
+++ b/.github/workflows/release-build.yaml
@@ -34,7 +34,7 @@ jobs:
           cd ../temp/wpcloud-station
           unzip theme.zip
           cd ../..
-          zip -r ./theme.zip temp/wpcloud-station
+          zip -r ./theme.zip temp
           rm -rf temp
 
       - name: Setup Node for plugin
@@ -55,7 +55,7 @@ jobs:
           cd ../temp/wpcloud-station
           unzip plugin.zip
           cd ../..
-          zip -r ./plugin.zip temp/wpcloud-station
+          zip -r ./plugin.zip temp
           rm -rf temp
 
       - name: Get release
