--- a/.github/workflows/release-build.yaml
+++ b/.github/workflows/release-build.yaml
@@ -33,8 +33,10 @@ jobs:
           zip -r ../temp/wpcloud-station/theme.zip . -x@.distignore
           cd ../temp/wpcloud-station
           unzip theme.zip
-          cd ../
+          rm theme.zip
+          cd ..
           zip -r ../theme.zip ./wpcloud-station
+          cd ..
           rm -rf temp
 
       - name: Setup Node for plugin
@@ -54,8 +56,10 @@ jobs:
           zip -r ../temp/wpcloud-station/plugin.zip . -x@.distignore
           cd ../temp/wpcloud-station
           unzip plugin.zip
-          cd ../
+          rm plugin.zip
+          cd ..
           zip -r ../plugin.zip wpcloud-station
+          cd ..
           rm -rf temp
 
       - name: Get release
